base/namespace-wordpress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
  labels:
    name: wordpress
