base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress-app
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-data
              mountPath: /var/www/html
      volumes:
        - name: wp-data
          persistentVolumeClaim:
            claimName: wp-pvc
