base/mysql-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-external
subsets:
  - addresses:
      - ip: 10.0.X.Y   # TODO: put MySQL EC2 private IP here
    ports:
      - name: mysql
        port: 3306
