base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-external
spec:
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
